--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,6 +239,7 @@ svg {
   display: -ms-flexbox;
   display: flex;
   font-size: 24px;
+  padding: 0 20px;
 }
 @media (max-width: 900px) {
   .menu {
@@ -316,6 +317,15 @@ svg {
         -ms-flex-direction: column;
             flex-direction: column;
     padding: 0px 10px 150px 10px;
+  }
+}
+@media (max-width: 600px) {
+  .block-main__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0px 10px 75px 10px;
   }
 }
 .block-main__buttons {
@@ -605,6 +615,11 @@ svg {
       -ms-flex-align: center;
           align-items: center;
   gap: 20px;
+}
+@media (max-width: 1150px) {
+  .footer__container {
+    grid-template-columns: 1fr;
+  }
 }
 .footer__logo {
   text-align: center;
