--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -46,7 +46,7 @@
                         <img src="../static/img/ico/account_img.png" alt="account image">
                     </div>
                     <form class="container col-5 " id="container-form" action="/account" method="post">
-                        <div class="col-auto">
+                        <div class="col-auto col-account">
                             <div class="col-8 col2">
                                 <div class="col-8">
                                     <label for="exampleFormControlInput1" class="col-form-label" id="nome">Nome</label>
@@ -124,7 +124,6 @@
             }
         }
     </script>
-    <script src="../static/js/fetch.js" defer></script>
 </body>
 
 </html>
