--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -63,8 +63,8 @@
         </div>
         <div class="col-8">
           <label for="inputPassword6" class="col-form-label">Password</label>
-          <input type="password" name="inputPassword" id="inputPassword" maxlength="20" minlength="8" class="form-control"
-            aria-describedby="passwordHelpInline" placeholder="Must be 8-20 characters long.">
+          <input type="password" name="inputPassword" id="inputPassword" maxlength="20" minlength="8"
+            class="form-control" aria-describedby="passwordHelpInline" placeholder="Must be 8-20 characters long.">
           <span class="material-symbols-outlined visibility_account" type="button" onclick="showPwd()"
             value="Mostra/nascondi password">
             visibility
@@ -72,8 +72,7 @@
         </div>
       </div>
       <div id="link_log-in">
-        <span>Hai già un account? </span><a class="link" href="login"><span
-            class="color-red ">Accedi</span></a>
+        <span>Hai già un account? </span><a class="link" href="login"><span class="color-red ">Accedi</span></a>
       </div>
       <div class="col-auto container btn_sign-ing" id="btn_accedi">
         <button type="submit" class="btn btn__red mb-3">Iscriviti</button>
