--- a/templates/schede.html
+++ b/templates/schede.html
@@ -20,36 +20,57 @@
 </head>
 
 <body>
-    <header class="header" id="header">
-        <div class="header__container">
-            <menu class="header__menu menu">
-                <div class="menu__logo logo">
-                    <a href="index"><img src="../static/img/logo/logo.png" alt="logo"></a>
-                </div>
-                <ul class="menu__items">
-                    <li class="menu__item"><a class="link" href="index">Casa</a></li>
-                    <li class="menu__item"><a class="link" href="index#dreamTeam">Chi Siamo</a></li>
-                </ul>
-                <div class="menu__burger">
-                    <a href="account"><span class="link_account">My account</span><img src="../static/img/ico/login.png"
-                            alt="menu"></a>
-                </div>
-            </menu>
-        </div>
-    </header>
-    <main class="main-schede">
-        <div class="main-schede__container">
-            <div class="title_schede container-fluid titles-main__subTitle">
-                <h1>
-                    __Le Tue Schede
-                </h1>
+    <div class="wrapper log-in">
+        <header class="header" id="header">
+            <div class="header__container">
+                <menu class="header__menu menu">
+                    <div class="menu__logo logo">
+                        <a href="index"><img src="../static/img/logo/logo.png" alt="logo"></a>
+                    </div>
+                    <ul class="menu__items">
+                        <li class="menu__item"><a class="link" href="index">Home</a></li>
+                        <li class="menu__item"><a class="link" href="index#dreamTeam">Chi Siamo</a></li>
+                    </ul>
+                    <div class="menu__burger">
+                        <a href="account"><span class="link_account">My account</span><img
+                                src="../static/img/ico/login.png" alt="menu"></a>
+                    </div>
+                </menu>
             </div>
+        </header>
+        <main class="main-schede">
+            <div class="main-schede__container">
+                <div class="title_schede container-fluid titles-main__subTitle">
+                    <h1>
+                        __Le Tue Schede
+                    </h1>
+                </div>
 
-            <div class="tutti-schede" id="mainContainer">
+                <div class="tutti-schede" id="mainContainer">
+
+                </div>
+        </main>
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__icons">
+                    <div class="social-contacts">
+                        <a class="logo-footer" href="#header"><img src="../static/img/logo/logoRed.png" alt="logo"></a>
+                        <a target="_blank" href="https://www.youtube.com/"><img
+                                src="../static/img/ico/social/youtube.svg" alt="YouTube"></a>
+                        <a target="_blank" href="https://www.facebook.com/"><img
+                                src="../static/img/ico/social/facebook.svg" alt="facebook"></a>
+                        <a target="_blank" href="https://www.instagram.com/"><img
+                                src="../static/img/ico/social/instagram.svg" alt="instagram"></a>
+                    </div>
+                </div>
+                <p class="footer__topText">Palestriamoci è un'app di fitness che offre allenamenti personalizzati per
+                    appassionati e atleti, adattandosi a obiettivi e preferenze.</p>
+                <p class="footer__bottomText">Creato da un gruppo di studenti seduti nell'ultimo banco di Academy Angelo
+                    Rizzoli. Tutti i diritti riservati. 2023-2024</p>
 
             </div>
-    </main>
-
+        </footer>
+        </вшм>
 </body>
 
 </html>
