--- a/static/scss/sheda.scss
+++ b/static/scss/sheda.scss
@@ -1,4 +1,5 @@
 // ===================================== header
+
 .menu {
 
     // .menu__burger
@@ -17,6 +18,10 @@
 .link_account {
     position: relative;
     padding-bottom: 5px;
+
+    @media (max-width: 350px) {
+        display: none;
+    }
 }
 
 .link_account:after {
@@ -28,6 +33,8 @@
     height: 2px;
     background: linear-gradient(#FF2625, #FF2625);
     transition: width .3s;
+
+
 }
 
 .link_account:hover::after {
@@ -35,6 +42,12 @@
 }
 
 // =============================== shede
+
+.main-schede {
+    flex: 1 1 auto;
+    // height: 100%;
+}
+
 .tutti-schede {
     display: flex;
     width: 100%;
@@ -222,6 +235,7 @@ td {
     margin: 0;
     padding: 10px;
     gap: 10px;
+    text-align: left;
 
     .p_commento {
         margin-bottom: 0;
