add verifica di password nella pagina log-in

--- a/static/css/log-in.css
+++ b/static/css/log-in.css
@@ -209,3 +209,26 @@ ul {
   width: 100%;
   position: relative;
 }
+
+.passWithError {
+  padding: 15px;
+  background-color: rgba(255, 37, 37, 0.4274509804);
+  width: 90%;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-clip: padding-box;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  border-radius: var(--bs-border-radius);
+  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+.passWithError p {
+  margin-bottom: 0;
+}
