--- a/templates/schede.html
+++ b/templates/schede.html
@@ -24,7 +24,7 @@
         <header class="header" id="header">
             <div class="header__container">
                 <menu class="header__menu menu">
-                    <div class="menu__logo logo">
+                    <div class="menu__logo logo logo-schede">
                         <a href="index"><img src="../static/img/logo/logo.png" alt="logo"></a>
                     </div>
                     <ul class="menu__items">
@@ -70,7 +70,7 @@
 
             </div>
         </footer>
-        </вшм>
+    </div>
 </body>
 
 </html>
