--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -15,6 +15,7 @@
   <link rel="icon" href="/static/img/logo/logoRed.ico">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <script src="../static/js/login.js" defer></script>
 </head>
 
 <body>
@@ -38,6 +39,7 @@
       <div class="flex">
         <img src="../static/img/logo/logo.png" style="width: 200px;" alt="Logo" id="logo_log-in">
       </div>
+
       <h1 class="access_text">Benvenuto su <span class="color-red">__Palestriamoci</span> </h1>
       <form class="container col-5 " id="container-log-in" action="/login" method="post">
         <div class="col-auto">
@@ -63,6 +65,11 @@
             </span>
           </div>
         </div>
+        {% if loginError == True:%}
+        <div class="passWithError">
+          <p>L`email o la password inseriti non sono corretti</p>
+        </div>
+        {% endif %}
         <div id="link_sing-in">
           <span>Non hai un account? </span><a class="link" href="register"><span
               class="color-red ">Registrati</span></a>
@@ -105,6 +112,9 @@
         input.type = "password";
       }
     }
+
+
+
   </script>
 </body>
 
