--- a/static/scss/itc-slider.scss
+++ b/static/scss/itc-slider.scss
@@ -12,12 +12,21 @@
     align-self: center;
     text-align: center;
 
+
     @media (max-width: 1150px) {
         max-width: 900px;
     }
 
     @media (max-width: 950px) {
         max-width: 450px;
+    }
+
+    @media (max-width: 450px) {
+        max-width: 350px;
+    }
+
+    @media (max-width: 360px) {
+        max-width: 300px;
     }
 }
 
@@ -26,6 +35,10 @@
     position: relative;
     padding: 50px;
     margin-bottom: 50px;
+
+    @media (max-width: 450px) {
+        padding: 50px 0;
+    }
 
 }
 
@@ -39,6 +52,7 @@
     display: flex;
     transition: transform 0.5s ease;
     will-change: transform;
+
 }
 
 .itc-slider-transition-none {
@@ -107,6 +121,7 @@
     border: none;
     transform: translateY(-50%);
     cursor: pointer;
+
 }
 
 .itc-slider-btn-hide {
@@ -158,6 +173,7 @@
     margin: 0 15%;
     padding-left: 0;
     list-style: none;
+
 }
 
 .itc-slider-indicator {
