--- a/static/scss/log-in.scss
+++ b/static/scss/log-in.scss
@@ -18,7 +18,11 @@
 
 
     .logo {
-        width: 100 px;
+        width: 44px;
+    }
+
+    .logo-schede {
+        width: 100px;
     }
 
     .menu__logo {
@@ -27,7 +31,11 @@
 
     .header {
         width: 100%;
-        // padding: 20px 0;
+        padding: 20px 0;
+    }
+
+    .header_schede {
+        padding: 0px;
     }
 
     .footer {
