--- a/templates/schede.html
+++ b/templates/schede.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="wrapper log-in">
-        <header class="header" id="header">
+        <header class="header header_schede" id="header">
             <div class="header__container">
                 <menu class="header__menu menu">
                     <div class="menu__logo logo logo-schede">
