--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -32,7 +32,16 @@
                         <!-- <li class="menu__item"><a class="link" href="#">Contatti</a></li> -->
                     </ul>
                     <div class="menu__burger">
-                        <a href="login"><img src="../static/img/ico/login.png" alt="menu"></a>
+                        <div class="dropdown">
+                            <a class="mainmenubtn">
+                                <img src="../static/img/ico/login.png" alt="menu">
+                            </a>
+
+                            <div class="dropdown-child dropdown-child_acc">
+                                <a class="btn__white" href="account">My account</a>
+                                <a class="btn__white" href="logout">Log out</a>
+                            </div>
+                        </div>
                     </div>
                 </menu>
             </div>
