--- a/templates/schede.html
+++ b/templates/schede.html
@@ -32,8 +32,16 @@
                         <li class="menu__item"><a class="link" href="index#dreamTeam">Chi Siamo</a></li>
                     </ul>
                     <div class="menu__burger">
-                        <a href="account"><span class="link_account">My account</span><img
-                                src="../static/img/ico/login.png" alt="menu"></a>
+                        <div class="dropdown">
+                            <a class="mainmenubtn">
+                                <img src="../static/img/ico/login.png" alt="menu">
+                            </a>
+
+                            <div class="dropdown-child">
+                                <a class="btn__white" href="account">My account</a>
+                                <a class="btn__white" href="logout">Log out</a>
+                            </div>
+                        </div>
                     </div>
                 </menu>
             </div>
