--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                         <li class="menu__item"><a class="link" href="#dreamTeam">Chi siamo</a></li>
                     </ul>
                     <div class="menu__burger">
-                        {% if session["id_loggeduser"] != None: %}
+                        {% if session.get("id_loggeduser") != None: %}
                         <a href="showcards"><img src="../static/img/ico/login.png" alt="menu"></a>
                         {% else %}
                         <a href="login"><img src="../static/img/ico/login.png" alt="menu"></a>
