fix logic of page register

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -69,7 +69,8 @@
         </div>
         {% if signinError == True:%}
         <div class="passWithError passWithError_register">
-          <p>Utente gia registrato</p>
+          <!-- <p>Utente gia registrato</p> -->
+          <p>Si è verificato un errore durante la registrazione</p>
         </div>
         {% endif %}
       </div>
